unpackaged/main/default/objects/Framework_Agreement__c/Framework_Agreement__c.object-meta.xml
<CustomObject>
    <label>Accord - Cadre</label>
    <nameField>
        <label>Nom du contrat de référence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accords - Cadres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>