unpackaged/main/default/objects/Framework_Agreement__c/fields/Accident_sans_tiers_Semi_remorque__c.field-meta.xml
<CustomField>
    <fullName>Accident_sans_tiers_Semi_remorque__c</fullName>
    <label>Accident sans tiers - Semi-remorque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>