unpackaged/main/default/objects/Framework_Agreement__c/fields/Accident_x_de_la_VRADE_Electrique_VL__c.field-meta.xml
<CustomField>
    <fullName>Accident_x_de_la_VRADE_Electrique_VL__c</fullName>
    <label>Accident x% de la VRADE  - Electrique VL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>