unpackaged/main/default/objects/Framework_Agreement__c/fields/AccidentGraveXDeVRADE__c.field-meta.xml
<CustomField>
    <fullName>AccidentGraveXDeVRADE__c</fullName>
    <label>Franchise accident grave X% de la VRADE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>