unpackaged/main/default/objects/Framework_Agreement__c/fields/AccidentsAvecSansTiers__c.field-meta.xml
<CustomField>
    <fullName>AccidentsAvecSansTiers__c</fullName>
    <label>Franchise accidents avec et sans tiers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>