unpackaged/main/default/objects/Framework_Agreement__c/fields/AcompteClientLD__c.field-meta.xml
<CustomField>
    <fullName>AcompteClientLD__c</fullName>
    <label>Acompte CD - client LD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aucun</fullName>
                <default>true</default>
                <label>Aucun</label>
            </value>
            <value>
                <fullName>100% du loyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>