unpackaged/main/default/objects/Framework_Agreement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>