unpackaged/main/default/objects/Framework_Agreement__c/fields/Age_maximum_VL__c.field-meta.xml
<CustomField>
    <fullName>Age_maximum_VL__c</fullName>
    <label>Âge maximum - VL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>