unpackaged/main/default/objects/Framework_Agreement__c/fields/Age_minimum_PL__c.field-meta.xml
<CustomField>
    <fullName>Age_minimum_PL__c</fullName>
    <label>Âge minimum - PL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>