unpackaged/main/default/objects/Framework_Agreement__c/fields/AgeMaximum__c.field-meta.xml
<CustomField>
    <fullName>AgeMaximum__c</fullName>
    <label>Âge maximum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>