unpackaged/main/default/objects/Framework_Agreement__c/fields/AgeMinimum__c.field-meta.xml
<CustomField>
    <fullName>AgeMinimum__c</fullName>
    <label>Âge minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>