unpackaged/main/default/objects/Framework_Agreement__c/fields/AnciennetePermisDeConduire__c.field-meta.xml
<CustomField>
    <fullName>AnciennetePermisDeConduire__c</fullName>
    <label>Ancienneté du permis de conduire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>