unpackaged/main/default/objects/Framework_Agreement__c/fields/AutorisationSortieTerritoire__c.field-meta.xml
<CustomField>
    <fullName>AutorisationSortieTerritoire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorisation de sortie du territoire</label>
    <type>Checkbox</type>
</CustomField>