unpackaged/main/default/objects/Framework_Agreement__c/fields/Autre_indice_indexation_loyers_km__c.field-meta.xml
<CustomField>
    <fullName>Autre_indice_indexation_loyers_km__c</fullName>
    <label>Autre indice indexation loyers et KM</label>
    <length>200</length>
    <type>Text</type>
</CustomField>