unpackaged/main/default/objects/Framework_Agreement__c/fields/AutreDepotGarantieLD__c.field-meta.xml
<CustomField>
    <fullName>AutreDepotGarantieLD__c</fullName>
    <label>Si autres, précisez (LD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>