unpackaged/main/default/objects/Framework_Agreement__c/fields/AutreDepotGarantieMDGrade1a6__c.field-meta.xml
<CustomField>
    <fullName>AutreDepotGarantieMDGrade1a6__c</fullName>
    <label>Si autres, précisez (MD Grade 1 à 6)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>