unpackaged/main/default/objects/Framework_Agreement__c/fields/AutreDepotGarantieMDGrade7a10__c.field-meta.xml
<CustomField>
    <fullName>AutreDepotGarantieMDGrade7a10__c</fullName>
    <label>Si autres, précisez (MD Grade 7 à 10)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>