unpackaged/main/default/objects/Framework_Agreement__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>TEXT(Organisation_Commerciale__r.Brand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marque</label>
    <type>Text</type>
</CustomField>