unpackaged/main/default/objects/Framework_Agreement__c/fields/Bris_de_glace_Electrique_VL__c.field-meta.xml
<CustomField>
    <fullName>Bris_de_glace_Electrique_VL__c</fullName>
    <label>Bris de glace - Electrique VL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>