unpackaged/main/default/objects/Framework_Agreement__c/fields/BrisGlace__c.field-meta.xml
<CustomField>
    <fullName>BrisGlace__c</fullName>
    <label>Franchise bris de glace</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>