unpackaged/main/default/objects/Framework_Agreement__c/fields/Business_Line2__c.field-meta.xml
<CustomField>
    <fullName>Business_Line2__c</fullName>
    <formula>TEXT(Organisation_Commerciale__r.BusinessLine__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Line</label>
    <type>Text</type>
</CustomField>