unpackaged/main/default/objects/Framework_Agreement__c/fields/Caution_LD_7_10_Sans_Grade__c.field-meta.xml
<CustomField>
    <fullName>Caution_LD_7_10_Sans_Grade__c</fullName>
    <label>Caution LD (7 à 10, Sans Grade)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispense</fullName>
                <label>Dispensé</label>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>