unpackaged/main/default/objects/Framework_Agreement__c/fields/Caution_LD_Grade_1_6__c.field-meta.xml
<CustomField>
    <fullName>Caution_LD_Grade_1_6__c</fullName>
    <label>Caution LD (Grade 1 à 6)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispense</fullName>
                <label>Dispensé</label>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>