unpackaged/main/default/objects/Framework_Agreement__c/fields/Choc_en_partie_basse_Electrique_VL__c.field-meta.xml
<CustomField>
    <fullName>Choc_en_partie_basse_Electrique_VL__c</fullName>
    <label>Choc en partie basse - Electrique VL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>