unpackaged/main/default/objects/Framework_Agreement__c/fields/Choc_en_partie_basse_Semi_remorque__c.field-meta.xml
<CustomField>
    <fullName>Choc_en_partie_basse_Semi_remorque__c</fullName>
    <label>Choc en partie basse - Semi-remorque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>