unpackaged/main/default/objects/Framework_Agreement__c/fields/Choc_hauteur_perte_totale_Electrique_PL__c.field-meta.xml
<CustomField>
    <fullName>Choc_hauteur_perte_totale_Electrique_PL__c</fullName>
    <label>Choc hauteur perte totale -Electrique PL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>