unpackaged/main/default/objects/Framework_Agreement__c/fields/Choc_hauteur_perte_totale_Semi_remorque__c.field-meta.xml
<CustomField>
    <fullName>Choc_hauteur_perte_totale_Semi_remorque__c</fullName>
    <label>Choc hauteur perte totale -Semi-remorque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>