unpackaged/main/default/objects/Framework_Agreement__c/fields/ChocHauteurAvecPerteTotale__c.field-meta.xml
<CustomField>
    <fullName>ChocHauteurAvecPerteTotale__c</fullName>
    <label>Choc en hauteur avec perte totale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>