unpackaged/main/default/objects/Framework_Agreement__c/fields/CoefficientFranchiseInterimaires__c.field-meta.xml
<CustomField>
    <fullName>CoefficientFranchiseInterimaires__c</fullName>
    <inlineHelpText>Coefficient multiplicateur du montant de la franchise intérimaires par rapport à la franchise initiale. 
x1, x2 ou x4.</inlineHelpText>
    <label>Coefficient Franchise Intérimaires</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>