unpackaged/main/default/objects/Framework_Agreement__c/fields/CoefficientMontantFranchise21Ans__c.field-meta.xml
<CustomField>
    <fullName>CoefficientMontantFranchise21Ans__c</fullName>
    <inlineHelpText>Coefficient multiplicateur par rapport à la franchise initiale, pour une personne de moins de 21 ans</inlineHelpText>
    <label>Coefficient Montant Franchise -21 ans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>