unpackaged/main/default/objects/Framework_Agreement__c/fields/CompensationKilometrique__c.field-meta.xml
<CustomField>
    <fullName>CompensationKilometrique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compensation kilométrique</label>
    <type>Checkbox</type>
</CustomField>