unpackaged/main/default/objects/Framework_Agreement__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accords - Cadres</relationshipLabel>
    <relationshipName>Accords_Cadres</relationshipName>
    <type>Lookup</type>
</CustomField>