unpackaged/main/default/objects/Framework_Agreement__c/fields/Conditions_specifiques__c.field-meta.xml
<CustomField>
    <fullName>Conditions_specifiques__c</fullName>
    <label>Conditions spécifiques</label>
    <length>200</length>
    <type>Text</type>
</CustomField>