unpackaged/main/default/objects/Framework_Agreement__c/fields/ConditionsLDVehicule__c.field-meta.xml
<CustomField>
    <fullName>ConditionsLDVehicule__c</fullName>
    <label>Conditions - LD Véhicule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>