unpackaged/main/default/objects/Framework_Agreement__c/fields/ConditionsPorteSortie__c.field-meta.xml
<CustomField>
    <fullName>ConditionsPorteSortie__c</fullName>
    <label>Conditions - Porte de sortie</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>