unpackaged/main/default/objects/Framework_Agreement__c/fields/ContratRemisePiedFacture__c.field-meta.xml
<CustomField>
    <fullName>ContratRemisePiedFacture__c</fullName>
    <label>Contrat remise pied de facture</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>LD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>