unpackaged/main/default/objects/Framework_Agreement__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT(Organisation_Commerciale__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pays</label>
    <type>Text</type>
</CustomField>