unpackaged/main/default/objects/Framework_Agreement__c/fields/Couverture_21_ans__c.field-meta.xml
<CustomField>
    <fullName>Couverture_21_ans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Couverture -21 ans</label>
    <type>Checkbox</type>
</CustomField>