unpackaged/main/default/objects/Framework_Agreement__c/fields/CouvertureInterimaires__c.field-meta.xml
<CustomField>
    <fullName>CouvertureInterimaires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Couverture intérimaires</label>
    <type>Checkbox</type>
</CustomField>