unpackaged/main/default/objects/Framework_Agreement__c/fields/Date_de_debut_de_validit_des_CGL__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut_de_validit_des_CGL__c</fullName>
    <label>Date de début de validité des CGL</label>
    <type>Date</type>
</CustomField>