unpackaged/main/default/objects/Framework_Agreement__c/fields/Date_de_signature_Accord_Cadre__c.field-meta.xml
<CustomField>
    <fullName>Date_de_signature_Accord_Cadre__c</fullName>
    <label>Date de signature contrat de référence</label>
    <type>Date</type>
</CustomField>