unpackaged/main/default/objects/Framework_Agreement__c/fields/DateIndexation__c.field-meta.xml
<CustomField>
    <fullName>DateIndexation__c</fullName>
    <label>Date d&#39;indexation</label>
    <type>Date</type>
</CustomField>