unpackaged/main/default/objects/Framework_Agreement__c/fields/Degradations_vandalisme_Electrique_VL__c.field-meta.xml
<CustomField>
    <fullName>Degradations_vandalisme_Electrique_VL__c</fullName>
    <label>Dégradations/vandalisme - Electrique VL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>