unpackaged/main/default/objects/Framework_Agreement__c/fields/Degradations_vandalisme_Semi_remorque__c.field-meta.xml
<CustomField>
    <fullName>Degradations_vandalisme_Semi_remorque__c</fullName>
    <label>Dégradations/vandalisme - Semi-remorque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>