unpackaged/main/default/objects/Framework_Agreement__c/fields/DelaiPaiement__c.field-meta.xml
<CustomField>
    <fullName>DelaiPaiement__c</fullName>
    <label>Délai de paiement (en jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>