unpackaged/main/default/objects/Framework_Agreement__c/fields/DelaiReglementLD__c.field-meta.xml
<CustomField>
    <fullName>DelaiReglementLD__c</fullName>
    <defaultValue>&quot;30 jours&quot;</defaultValue>
    <label>Délai de règlement LD</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ModeFacturationLD__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Delai_reglement</valueSetName>
    </valueSet>
</CustomField>