unpackaged/main/default/objects/Framework_Agreement__c/fields/DelaiReglementMD__c.field-meta.xml
<CustomField>
    <fullName>DelaiReglementMD__c</fullName>
    <defaultValue>&quot;30 jours&quot;</defaultValue>
    <label>Délai de règlement MD</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ModeFacturationMD__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Delai_reglement</valueSetName>
    </valueSet>
</CustomField>