unpackaged/main/default/objects/Framework_Agreement__c/fields/Depot_de_garantie_OBU__c.field-meta.xml
<CustomField>
    <fullName>Depot_de_garantie_OBU__c</fullName>
    <label>Dépôt de garantie OBU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>