unpackaged/main/default/objects/Framework_Agreement__c/fields/DepotGarantieCDAncienClient__c.field-meta.xml
<CustomField>
    <fullName>DepotGarantieCDAncienClient__c</fullName>
    <inlineHelpText>Montant par défaut à reporter : 

Dépôt de garantie &quot;VL&quot;: 1500€​​. 
Dépôt de garantie &quot;Poids-lourds&quot; : 2500€​​. 
Dépôt de garantie &quot;Container&quot; : 0€.</inlineHelpText>
    <label>Depot de garantie CD - client LD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>