unpackaged/main/default/objects/Framework_Agreement__c/fields/DepotGarantieLD__c.field-meta.xml
<CustomField>
    <fullName>DepotGarantieLD__c</fullName>
    <label>Caution LD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 mois</fullName>
            </value>
            <value>
                <fullName>2 mois</fullName>
            </value>
            <value>
                <fullName>1 mois</fullName>
            </value>
            <value>
                <fullName>Dispensé</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>