unpackaged/main/default/objects/Framework_Agreement__c/fields/DepotGarantieMD__c.field-meta.xml
<CustomField>
    <fullName>DepotGarantieMD__c</fullName>
    <label>Dépôt de garantie MD (Grade 1 à 6)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 mois</fullName>
            </value>
            <value>
                <fullName>2 mois</fullName>
                <default>true</default>
                <label>2 mois</label>
            </value>
            <value>
                <fullName>1 mois</fullName>
            </value>
            <value>
                <fullName>Dispensé</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>