unpackaged/main/default/objects/Framework_Agreement__c/fields/DepotGarantieMDGrade710__c.field-meta.xml
<CustomField>
    <fullName>DepotGarantieMDGrade710__c</fullName>
    <inlineHelpText>Grade 7 à 10 et sans grade</inlineHelpText>
    <label>Dépôt de garantie MD (7à10, Sans Grade)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 mois</fullName>
            </value>
            <value>
                <fullName>2 mois</fullName>
                <default>true</default>
                <label>2 mois</label>
            </value>
            <value>
                <fullName>1 mois</fullName>
            </value>
            <value>
                <fullName>Dispensé</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>