unpackaged/main/default/objects/Framework_Agreement__c/fields/Duree_reconduction_contrat_echeance__c.field-meta.xml
<CustomField>
    <fullName>Duree_reconduction_contrat_echeance__c</fullName>
    <label>Durée reconduction contrat échéance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pas de reconduction</fullName>
            </value>
            <value>
                <fullName>12 mois</fullName>
            </value>
            <value>
                <fullName>24 mois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>