unpackaged/main/default/objects/Framework_Agreement__c/fields/Duree_standard_contrat_LD__c.field-meta.xml
<CustomField>
    <fullName>Duree_standard_contrat_LD__c</fullName>
    <inlineHelpText>En nombre de mois</inlineHelpText>
    <label>Durée standard du contrat LD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>