unpackaged/main/default/objects/Framework_Agreement__c/fields/DureeduContrat__c.field-meta.xml
<CustomField>
    <fullName>DureeduContrat__c</fullName>
    <inlineHelpText>En nombre de mois</inlineHelpText>
    <label>Durée du Contrat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>