unpackaged/main/default/objects/Framework_Agreement__c/fields/DureeLDVehicule__c.field-meta.xml
<CustomField>
    <fullName>DureeLDVehicule__c</fullName>
    <label>Durée (en mois) - LD Véhicule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>