unpackaged/main/default/objects/Framework_Agreement__c/fields/EcheanceTechniqueLDVehicule__c.field-meta.xml
<CustomField>
    <fullName>EcheanceTechniqueLDVehicule__c</fullName>
    <label>Echéance technique - LD Véhicule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>