unpackaged/main/default/objects/Framework_Agreement__c/fields/Frais_administratif_gestion_de_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Frais_administratif_gestion_de_sinistre__c</fullName>
    <label>Frais administratif gestion de sinistre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>