unpackaged/main/default/objects/Framework_Agreement__c/fields/Frais_de_gestion_PV_amende__c.field-meta.xml
<CustomField>
    <fullName>Frais_de_gestion_PV_amende__c</fullName>
    <label>Frais de gestion PV - amende</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>