unpackaged/main/default/objects/Framework_Agreement__c/fields/Franchise_choc_en_partie_basse__c.field-meta.xml
<CustomField>
    <fullName>Franchise_choc_en_partie_basse__c</fullName>
    <label>Franchise choc en partie basse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>