unpackaged/main/default/objects/Framework_Agreement__c/fields/GrilleCD__c.field-meta.xml
<CustomField>
    <fullName>GrilleCD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grille CD</label>
    <type>Checkbox</type>
</CustomField>