unpackaged/main/default/objects/Framework_Agreement__c/fields/GrilleLD__c.field-meta.xml
<CustomField>
    <fullName>GrilleLD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grille LD</label>
    <type>Checkbox</type>
</CustomField>